# PhotoArchiveEvaluator

./: .gitignore  LICENSE
.github/workflows/: sync-wiki.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 223dfe122f05_phase1_core_tables.py  48194c686472_advanced_reviews_table.py  6e16b8462ac0_tags_photo_tags.py  7cd2ac33ce07_api_costs_table.py  815ddf81ee90_add_user_scores_table.py  8df49cc1998d_add_embeddings_table.py  a5f7fcce115e_portfolios_backups.py  ac3a67afe8ea_contests_table.py
backend/app/: config.py  main.py  scheduler.py  settings_store.py
backend/app/ai/: base.py  embed.py  exif_strip.py
backend/app/ai/local/: aesthetic.py  blip.py  clip.py  clip_tagger.py
backend/app/ai/remote/: claude.py  keys.py
backend/app/api/: advanced.py  backup.py  contests.py  eval.py  nas.py  photos.py  portfolios.py  scan.py  settings.py
backend/app/auth/: dependencies.py  password.py  router.py  store.py
backend/app/evaluator/: loop.py  rescore.py  worker.py
backend/app/nas/: credentials.py  dsm.py  session.py
backend/app/scanner/: _runner.py  dispatch.py  dsm.py  exif.py  local.py  walker.py
backend/app/storage/: db.py  models.py
backend/scripts/: backfill_caption_tags.py  backfill_clip.py  backfill_phash.py  nas_login.py  poc_score_folder.py  process_eval_queue.py  scan_dsm.py  scan_local.py  test_nas.py
docs/: ARCHITECTURE.md  Home.md  MVP.md  POC_REPORT.md  README.md  SCHEMA.md  SPEC.md  USAGE.md  _Sidebar.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: sync-wiki.sh
(+10 files in other folders)
