[project]
name = "photo-archive-evaluator"
version = "0.1.0"
description = "NAS 사진을 자동 인식·평가하는 도구 (백엔드)"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "hallower" }]

# Phase 1 PoC 의존성.
# Aesthetic Predictor V2.5는 PyPI 패키지가 없어 git URL로 별도 설치 (README 참조).
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "pillow>=10.0",
    "click>=8.1",
    "tqdm>=4.66",
    # web / db (Phase 1 골격)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
